--- a/CollegeTouring/mainwindow.ui
+++ b/CollegeTouring/mainwindow.ui
@@ -18,16 +18,16 @@
     <item row="0" column="0">
      <widget class="QTabWidget" name="tabWidget">
       <property name="currentIndex">
-       <number>0</number>
+       <number>1</number>
       </property>
-      <widget class="CollegeList" name="tab">
+      <widget class="CollegeList" name="tab_1">
        <attribute name="title">
-        <string>Tab 1</string>
+        <string>College List</string>
        </attribute>
       </widget>
       <widget class="QWidget" name="tab_2">
        <attribute name="title">
-        <string>Tab 2</string>
+        <string>Trip Planning</string>
        </attribute>
       </widget>
      </widget>
