--- a/CollegeTouring/collegelist.ui
+++ b/CollegeTouring/collegelist.ui
@@ -50,6 +50,13 @@
       </widget>
      </item>
      <item>
+      <widget class="QPushButton" name="pushButton">
+       <property name="text">
+        <string>Saddleback Only</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <spacer name="verticalSpacer">
        <property name="orientation">
         <enum>Qt::Vertical</enum>
