more admin changes

--- a/CollegeTouring/admin.ui
+++ b/CollegeTouring/admin.ui
@@ -42,7 +42,7 @@
     <attribute name="title">
      <string>Souvenirs Settings</string>
     </attribute>
-    <widget class="QLineEdit" name="lineEdit">
+    <widget class="QLineEdit" name="lineEdit_name">
      <property name="geometry">
       <rect>
        <x>120</x>
@@ -52,7 +52,7 @@
       </rect>
      </property>
     </widget>
-    <widget class="QLineEdit" name="lineEdit_2">
+    <widget class="QLineEdit" name="lineEdit_price">
      <property name="geometry">
       <rect>
        <x>120</x>
