--- a/CollegeTouring/admin.ui
+++ b/CollegeTouring/admin.ui
@@ -45,8 +45,8 @@
     <widget class="QLineEdit" name="lineEdit_name">
      <property name="geometry">
       <rect>
-       <x>120</x>
-       <y>90</y>
+       <x>130</x>
+       <y>110</y>
        <width>113</width>
        <height>22</height>
       </rect>
@@ -55,10 +55,10 @@
     <widget class="QLineEdit" name="lineEdit_price">
      <property name="geometry">
       <rect>
-       <x>120</x>
-       <y>120</y>
+       <x>130</x>
+       <y>150</y>
        <width>113</width>
-       <height>22</height>
+       <height>20</height>
       </rect>
      </property>
     </widget>
@@ -78,8 +78,8 @@
     <widget class="QLabel" name="label_3">
      <property name="geometry">
       <rect>
-       <x>40</x>
-       <y>90</y>
+       <x>60</x>
+       <y>110</y>
        <width>71</width>
        <height>20</height>
       </rect>
@@ -91,8 +91,8 @@
     <widget class="QLabel" name="label_4">
      <property name="geometry">
       <rect>
-       <x>70</x>
-       <y>120</y>
+       <x>90</x>
+       <y>150</y>
        <width>49</width>
        <height>16</height>
       </rect>
@@ -104,8 +104,8 @@
     <widget class="QPushButton" name="pushButton">
      <property name="geometry">
       <rect>
-       <x>270</x>
-       <y>100</y>
+       <x>280</x>
+       <y>110</y>
        <width>75</width>
        <height>24</height>
       </rect>
@@ -127,8 +127,8 @@
     <widget class="QPushButton" name="pushButton_2">
      <property name="geometry">
       <rect>
-       <x>100</x>
-       <y>290</y>
+       <x>200</x>
+       <y>250</y>
        <width>75</width>
        <height>24</height>
       </rect>
@@ -140,73 +140,76 @@
     <widget class="QComboBox" name="comboBox_2">
      <property name="geometry">
       <rect>
-       <x>100</x>
-       <y>260</y>
+       <x>40</x>
+       <y>250</y>
        <width>151</width>
        <height>22</height>
       </rect>
      </property>
     </widget>
-    <widget class="QLabel" name="label_5">
-     <property name="geometry">
-      <rect>
-       <x>30</x>
-       <y>260</y>
-       <width>81</width>
-       <height>20</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Select item: </string>
-     </property>
-    </widget>
     <widget class="QPushButton" name="pushButton_edit3">
      <property name="geometry">
       <rect>
-       <x>180</x>
-       <y>290</y>
+       <x>280</x>
+       <y>250</y>
        <width>75</width>
        <height>23</height>
       </rect>
      </property>
      <property name="text">
-      <string>Edit</string>
+      <string>Edit Price</string>
      </property>
     </widget>
-    <widget class="QLineEdit" name="lineEdit_pricechange">
+    <widget class="QLabel" name="label_5">
      <property name="geometry">
       <rect>
-       <x>360</x>
-       <y>260</y>
-       <width>113</width>
-       <height>20</height>
+       <x>20</x>
+       <y>60</y>
+       <width>141</width>
+       <height>31</height>
       </rect>
      </property>
+     <property name="text">
+      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:12pt; font-weight:700;&quot;&gt;Add a new Item:&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     </property>
     </widget>
-    <widget class="QPushButton" name="pushButton_done4">
+    <widget class="QLabel" name="label_6">
      <property name="geometry">
       <rect>
-       <x>480</x>
-       <y>260</y>
+       <x>20</x>
+       <y>190</y>
+       <width>241</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:12pt; font-weight:700;&quot;&gt;...or manage existing inventory:&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     </property>
+    </widget>
+    <widget class="QDoubleSpinBox" name="doubleSpinBox">
+     <property name="geometry">
+      <rect>
+       <x>370</x>
+       <y>250</y>
+       <width>62</width>
+       <height>22</height>
+      </rect>
+     </property>
+     <property name="maximum">
+      <double>1000.000000000000000</double>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pushButton_3done">
+     <property name="geometry">
+      <rect>
+       <x>440</x>
+       <y>250</y>
        <width>75</width>
-       <height>23</height>
+       <height>24</height>
       </rect>
      </property>
      <property name="text">
       <string>Done</string>
-     </property>
-    </widget>
-    <widget class="QLabel" name="label_enterprice6">
-     <property name="geometry">
-      <rect>
-       <x>360</x>
-       <y>240</y>
-       <width>91</width>
-       <height>16</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Enter new Price:</string>
      </property>
     </widget>
    </widget>
