--- a/CollegeTouring/mainwindow.ui
+++ b/CollegeTouring/mainwindow.ui
@@ -18,7 +18,7 @@
     <item row="0" column="0">
      <widget class="QTabWidget" name="tabWidget">
       <property name="currentIndex">
-       <number>3</number>
+       <number>2</number>
       </property>
       <property name="movable">
        <bool>false</bool>
@@ -31,7 +31,7 @@
         <property name="geometry">
          <rect>
           <x>590</x>
-          <y>20</y>
+          <y>10</y>
           <width>121</width>
           <height>24</height>
          </rect>
@@ -43,7 +43,7 @@
        <widget class="QLabel" name="label">
         <property name="geometry">
          <rect>
-          <x>260</x>
+          <x>230</x>
           <y>110</y>
           <width>251</width>
           <height>91</height>
@@ -61,7 +61,7 @@
       </widget>
       <widget class="displaySouvenirs" name="tab_3">
        <attribute name="title">
-        <string>Display Souvenirs</string>
+        <string>Souvenir List</string>
        </attribute>
       </widget>
       <widget class="TripPlanner" name="tab_2">
@@ -79,7 +79,7 @@
      <x>0</x>
      <y>0</y>
      <width>746</width>
-     <height>21</height>
+     <height>22</height>
     </rect>
    </property>
   </widget>
