--- a/CollegeTouring/collegelist.ui
+++ b/CollegeTouring/collegelist.ui
@@ -31,11 +31,6 @@
        <string>Undergrads</string>
       </property>
      </column>
-     <column>
-      <property name="text">
-       <string>Distance</string>
-      </property>
-     </column>
     </widget>
    </item>
    <item row="2" column="1">
@@ -55,7 +50,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="pushButton">
+      <widget class="QPushButton" name="sortBySaddleback">
        <property name="text">
         <string>Saddleback Only</string>
        </property>
