--- a/CollegeTouring/customtrip.ui
+++ b/CollegeTouring/customtrip.ui
@@ -151,7 +151,7 @@
     <string>Add</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton_2">
+  <widget class="QPushButton" name="tripOrderpushButton">
    <property name="geometry">
     <rect>
      <x>440</x>
@@ -164,7 +164,7 @@
     <string>Trip By Order</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton_3">
+  <widget class="QPushButton" name="mostEfficientpushButton">
    <property name="geometry">
     <rect>
      <x>440</x>
@@ -198,6 +198,32 @@
      <width>161</width>
      <height>26</height>
     </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_3">
+   <property name="geometry">
+    <rect>
+     <x>300</x>
+     <y>390</y>
+     <width>131</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Distance Traveled:</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="distanceDisplaylineEdit">
+   <property name="geometry">
+    <rect>
+     <x>320</x>
+     <y>420</y>
+     <width>81</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="readOnly">
+    <bool>true</bool>
    </property>
   </widget>
  </widget>
