--- a/CollegeTouring/customtrip.ui
+++ b/CollegeTouring/customtrip.ui
@@ -28,7 +28,7 @@
     <rect>
      <x>20</x>
      <y>10</y>
-     <width>251</width>
+     <width>291</width>
      <height>31</height>
     </rect>
    </property>
@@ -181,7 +181,7 @@
    <property name="geometry">
     <rect>
      <x>400</x>
-     <y>330</y>
+     <y>360</y>
      <width>42</width>
      <height>22</height>
     </rect>
@@ -191,7 +191,7 @@
    <property name="geometry">
     <rect>
      <x>420</x>
-     <y>370</y>
+     <y>400</y>
      <width>91</width>
      <height>24</height>
     </rect>
@@ -204,7 +204,7 @@
    <property name="geometry">
     <rect>
      <x>400</x>
-     <y>300</y>
+     <y>330</y>
      <width>141</width>
      <height>22</height>
     </rect>
@@ -214,7 +214,7 @@
    <property name="geometry">
     <rect>
      <x>340</x>
-     <y>276</y>
+     <y>306</y>
      <width>241</width>
      <height>21</height>
     </rect>
@@ -222,6 +222,7 @@
    <property name="font">
     <font>
      <pointsize>10</pointsize>
+     <weight>75</weight>
      <bold>true</bold>
     </font>
    </property>
@@ -233,7 +234,7 @@
    <property name="geometry">
     <rect>
      <x>450</x>
-     <y>330</y>
+     <y>360</y>
      <width>91</width>
      <height>24</height>
     </rect>
@@ -298,7 +299,7 @@
    <property name="geometry">
     <rect>
      <x>340</x>
-     <y>300</y>
+     <y>330</y>
      <width>49</width>
      <height>16</height>
     </rect>
@@ -311,7 +312,7 @@
    <property name="geometry">
     <rect>
      <x>340</x>
-     <y>330</y>
+     <y>360</y>
      <width>49</width>
      <height>16</height>
     </rect>
