--- a/CollegeTouring/tripplanner.ui
+++ b/CollegeTouring/tripplanner.ui
@@ -125,7 +125,7 @@
         <item>
          <widget class="QLabel" name="label_2">
           <property name="text">
-           <string>Source College</string>
+           <string>Starting College</string>
           </property>
           <property name="textFormat">
            <enum>Qt::AutoText</enum>
